add pipeline stop button
